Update API: Rename generate to autocomplete.
